メイン関数からスケジュール機能を削除し、ウェブページの変更チェック後に完了メッセージを表示するように修正。GitHub Actionsでハッシュファイルのキャッシュ機能を追加。

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,6 +22,14 @@ jobs:
         python -m pip install --upgrade pip
         pip install -r requirements.txt
     
+    - name: Cache hash file
+      uses: actions/cache@v3
+      with:
+        path: last_hashes.json
+        key: ${{ runner.os }}-hashes-${{ hashFiles('urls.txt') }}
+        restore-keys: |
+          ${{ runner.os }}-hashes-
+    
     - name: Run monitor
       env:
         SMTP_SERVER: ${{ secrets.SMTP_SERVER }}
