--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -5,6 +5,10 @@ on:
     - cron: '0 1 * * *'  # 毎日午前10時（日本時間）に実行
   workflow_dispatch:  # 手動実行も可能
 
+permissions:
+  contents: write
+  pull-requests: write
+
 jobs:
   monitor:
     runs-on: ubuntu-latest
