--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,6 +3,9 @@ name: Web Page Monitor
 on:
   schedule:
     - cron: '0 1 * * *'  # 毎日午前10時（日本時間）に実行
+  push:
+    branches:
+      - main
   workflow_dispatch:  # 手動実行も可能
 
 permissions:
