OpenAI APIによる差分要約機能を追加し、要約と詳細差分を通知に含めるように変更。APIキーが未設定の場合やエラー発生時には従来通り差分を通知。READMEとワークフローも更新。

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -38,6 +38,7 @@ jobs:
         EMAIL_USER: ${{ secrets.EMAIL_USER }}
         EMAIL_PASSWORD: ${{ secrets.EMAIL_PASSWORD }}
         TO_EMAILS: ${{ secrets.TO_EMAILS }}
+        OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
       run: python main.py
     
     - name: Commit changes
